--- a/Python/POC.ipynb
+++ b/Python/POC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +94,14 @@
     "#Generates features from csv\n",
     "def summarize(csv_file: str):\n",
     "    \n",
-    "    data = pd.read_csv(csv_file, index_col=False)\n",
-    "    output = data_analysis.get_start_end2(data)\n",
-    "    print(output)\n",
+    "    unprocessed = pd.read_csv(csv_file, index_col=False)\n",
+    "    start, end = data_analysis.get_start_end2(unprocessed)\n",
+    "    data = unprocessed[start:end]\n",
+    "\n",
     "    result = [0]*72\n",
     "    for index, col in enumerate(data):\n",
     "        if col != \"time\":\n",
-    "            if(index > 45):\n",
+    "            if(index > 36):\n",
     "                break\n",
     "            result[2*(index-1)], result[2*(index-1)+1] = data[col].mean(), data[col].var()\n",
     "\n",
@@ -120,25 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Series' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m25\u001b[39m\n\u001b[0;32m----> 2\u001b[0m train_features \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxsamples\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_file_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43msamples\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[5], line 27\u001b[0m, in \u001b[0;36mpreprocess\u001b[0;34m(filepathset)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess\u001b[39m(filepathset):\n\u001b[1;32m     26\u001b[0m     features \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 27\u001b[0m     features[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43m[\u001b[49m\u001b[43msummarize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfile\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfilepathset\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;66;03m#summarization\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     features[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m [act(file\u001b[38;5;241m.\u001b[39mname[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m filepathset] \u001b[38;5;66;03m#label\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m features\n",
-      "Cell \u001b[0;32mIn[5], line 27\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess\u001b[39m(filepathset):\n\u001b[1;32m     26\u001b[0m     features \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m---> 27\u001b[0m     features[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m [\u001b[43msummarize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m filepathset] \u001b[38;5;66;03m#summarization\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     features[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m [act(file\u001b[38;5;241m.\u001b[39mname[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m filepathset] \u001b[38;5;66;03m#label\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m features\n",
-      "Cell \u001b[0;32mIn[5], line 13\u001b[0m, in \u001b[0;36msummarize\u001b[0;34m(csv_file)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msummarize\u001b[39m(csv_file: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m     12\u001b[0m     data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_file, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 13\u001b[0m     start, end \u001b[38;5;241m=\u001b[39m \u001b[43mdata_analysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_start_end2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(start, end)\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m72\u001b[39m\n",
-      "File \u001b[0;32m~/Documents/GitHub/Tennis-Swing-Analyzer/Python/data_analysis.py:125\u001b[0m, in \u001b[0;36mget_start_end2\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;66;03m# end\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start, data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontroller_right_vel\u001b[39m\u001b[38;5;124m\"\u001b[39m]):\n\u001b[1;32m    126\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m    127\u001b[0m         \u001b[38;5;28mabs\u001b[39m(data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontroller_right_vel.z\u001b[39m\u001b[38;5;124m\"\u001b[39m][i]) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m\n\u001b[1;32m    128\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mabs\u001b[39m(data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontroller_right_vel.z\u001b[39m\u001b[38;5;124m\"\u001b[39m][i \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.2\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    132\u001b[0m         )\n\u001b[1;32m    133\u001b[0m     ):\n\u001b[1;32m    134\u001b[0m         end \u001b[38;5;241m=\u001b[39m i\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Series' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "samples = 25\n",
     "train_features = preprocess(xsamples(train_file_paths,samples))\n"
@@ -146,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
