--- a/Python/POC.ipynb
+++ b/Python/POC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,14 @@
     "#Generates features from csv\n",
     "def summarize(csv_file: str):\n",
     "    \n",
-    "    unprocessed = pd.read_csv(csv_file, index_col=False)\n",
-    "    start, end = data_analysis.get_start_end2(unprocessed)\n",
-    "    data = unprocessed[start:end]\n",
-    "\n",
-    "    result = [0]*72\n",
+    "    data = pd.read_csv(csv_file, index_col=False)\n",
+    "    start, end = data_analysis.get_start_end(data)\n",
+    "    data = data_analysis.add_features(data)\n",
+    "    data = data[start:end]\n",
+    "    result = [0]*80\n",
     "    for index, col in enumerate(data):\n",
     "        if col != \"time\":\n",
-    "            if(index > 36):\n",
+    "            if(index > 40):\n",
     "                break\n",
     "            result[2*(index-1)], result[2*(index-1)+1] = data[col].mean(), data[col].var()\n",
     "\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -144,15 +144,15 @@
     }
    ],
    "source": [
-    "rf = RandomForestClassifier()\n",
-    "rf.fit(train_features[0], train_features[1])\n",
-    "y_pred = rf.predict(train_features[0])\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(train_features[0], train_features[1])\n",
+    "y_pred = model.predict(train_features[0])\n",
     "accuracy = accuracy_score(train_features[1], y_pred)\n",
     "print(\"accuracy (test) :\", accuracy)\n",
     "\n",
     "#validation\n",
     "validation_features = preprocess(validation_file_paths)\n",
-    "y_pred_2 = rf.predict(validation_features[0])\n",
+    "y_pred_2 = model.predict(validation_features[0])\n",
     "accuracy2 = accuracy_score(validation_features[1], y_pred_2)\n",
     "print(\"accuracy (validation) :\", accuracy2)"
    ]
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
